# riot

./: .coverage-thresholds.json  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COLLABORATION.md  Cargo.toml  LICENSE  OVERNIGHT_LOG-composite-rust.md  OVERNIGHT_LOG.md  OVERNIGHT_LOG_anchor-m2.md  README.md  SERVICE-INVENTORY.md  package-lock.json  package.json
.cargo/: config.toml
crates/riot-anchor/: Cargo.toml
crates/riot-anchor-protocol/: Cargo.toml
crates/riot-anchor-protocol/schema/: riot-anchor-v1.cddl
crates/riot-anchor-protocol/src/: authority.rs  codec.rs  control.rs  digest.rs  lib.rs  records.rs  sync2.rs
crates/riot-anchor-protocol/src/sync2/: fsm.rs
crates/riot-anchor-protocol/tests/: authority_records.rs  canonical_codec.rs  control_vectors.rs  dependency_boundary.rs  golden_vectors.rs  ios_default_ticket.rs  sync2_duplex.rs  sync2_fsm.rs  verify_pulled_listing.rs
crates/riot-anchor-protocol/tests/sync2_harness/: mod.rs
crates/riot-anchor/examples/: demo_anchor.rs  demo_follow.rs  demo_host.rs
crates/riot-anchor/examples/demo_common/: mod.rs
crates/riot-anchor/src/: admission.rs  checkpoint.rs  config.rs  control.rs  daemon.rs  hosting.rs  idempotency.rs  lib.rs  listing.rs  main.rs  removal.rs  repository.rs  schema.rs  sync_driver.rs  sync_service.rs  work.rs
crates/riot-anchor/tests/: checkpoint_edges.rs  checkpoint_recovery.rs  control_edges.rs  control_prepare.rs  daemon_control.rs  daemon_e2e.rs  daemon_smoke.rs  hosting_commit.rs  hosting_edges.rs  hosting_failpoints.rs  hosting_manifest.rs  listing_edges.rs  listing_failpoints.rs  listing_submit.rs  removal_edges.rs  removal_reserve.rs  repository_errors.rs  repository_foundation.rs  schema_edges.rs  sync_driver.rs  sync_service_edges.rs  work_edges.rs
crates/riot-anchor/tests/hosting_common/: mod.rs
crates/riot-anchor/tests/listing_common/: mod.rs
crates/riot-anchor/tests/removal_common/: mod.rs
crates/riot-app-cli/: Cargo.toml
crates/riot-app-cli/src/: lib.rs  main.rs
crates/riot-app-cli/src/tests/: unit.rs
crates/riot-app-cli/tests/: cli_manifest_bounds.rs  cli_pack.rs
crates/riot-client-net/: Cargo.toml
crates/riot-client-net/src/: lib.rs  runtime.rs  safe_dial.rs
crates/riot-client-net/tests/: runtime_and_dial.rs
crates/riot-core/: Cargo.toml
crates/riot-core/examples/: pack_checklist.rs  pack_demo_space.rs  pack_starter.rs
crates/riot-core/src/: demo_fixture.rs  lib.rs  session.rs
crates/riot-core/src/apps/: admission.rs  bridge.rs  bundle.rs  directory.rs  endorse.rs  entry.rs  index.rs  inventory.rs  manifest.rs  mod.rs  starter.rs  trust.rs
crates/riot-core/src/coordinate/: entry.rs  mod.rs  model.rs  path.rs  store.rs
crates/riot-core/src/governance/: action.rs  actor.rs  authorize.rs  body.rs  evaluator.rs  frontier.rs  lineage.rs  mod.rs  paths.rs  record.rs  repository.rs  revoke.rs  test_support.rs
crates/riot-core/src/import/: bundle.rs  join.rs  mod.rs
crates/riot-core/src/meadowcap/: codec.rs  create.rs  delegate.rs  fingerprint.rs  inspect.rs  mod.rs  verify.rs
crates/riot-core/src/model/: mod.rs
crates/riot-core/src/newswire/: contributors.rs  entry.rs  mod.rs  model.rs  path.rs  projection.rs  share.rs  store.rs
crates/riot-core/src/profile/: card.rs  card_entry.rs  mod.rs  path.rs  resolver.rs
crates/riot-core/src/site/: follow.rs  manifest.rs  mod.rs  moderation.rs  moderation_entry.rs  resolve.rs  ticket.rs  validate.rs  version_floor.rs
crates/riot-core/src/store/: backup.rs  database.rs  evidence.rs  memory.rs  mod.rs  schema.rs
crates/riot-core/src/sync/: ffi_bridge.rs  mod.rs  reconcile.rs  state.rs  wire.rs
crates/riot-core/src/willow/: clock.rs  digest.rs  entry.rs  identity.rs  masthead.rs  mod.rs  owned.rs  site_paths.rs
crates/riot-core/tests/: apps_admission.rs  apps_bridge.rs  apps_bundle.rs  apps_codec_hostile.rs  apps_directory.rs  apps_endorse.rs  apps_entry_path.rs  apps_index_io.rs  apps_index_paths.rs  apps_index_scan.rs  apps_index_scan_hostile.rs  apps_inventory.rs  apps_manifest.rs  apps_starter.rs  apps_trust.rs  apps_trust_entries.rs  clock_conversion.rs  composite_admission.rs  composite_follow_admit.rs  composite_moderation_admission.rs  composite_moderation_codec.rs  composite_moderation_freshness.rs  composite_moderation_sign.rs  conference_fixture.rs  coordinate_import.rs  core_entries_with_prefix.rs  core_fail_closed.rs  core_import_app_entries.rs  core_import_app_index_entries.rs  core_import_charge_budget.rs  core_import_concurrency.rs  core_import_join.rs  core_import_lifecycle.rs  core_import_path_binding.rs  core_import_path_family_isolation.rs  core_import_path_size_ceilings.rs  core_import_profile_entries.rs  core_import_transaction.rs  core_signed_entries_in_namespace.rs  core_sync.rs  (+43 more)
crates/riot-ffi/: Cargo.toml
crates/riot-ffi/src/: apps_ffi.rs  community_registry.rs  demo_ffi.rs  lib.rs  mobile_api.rs  mobile_state.rs  newswire_ffi.rs  profile_ffi.rs  site_ffi.rs
crates/riot-ffi/src/net/: anchor.rs  anchor_e2e.rs  ffi.rs  mod.rs
crates/riot-ffi/tests/: apps_contract.rs  delegate_editor_section_contract.rs  demo_contract.rs  generate_newswire_export.rs  mobile_contract.rs  mobile_fail_closed.rs  mobile_refusal_surface.rs  moderation_classifier_lockstep.rs  newswire_contract.rs  newswire_contributors_contract.rs  newswire_is_editor_contract.rs  newswire_list_inspect_regression.rs  newswire_share_contract.rs  organizer_trust.rs  persistence_contract.rs  profile_contract.rs  prototype_newswire_app_launch.rs  site_manifest_contract.rs  spaces_relationships_contract.rs  starter_catalog_generation_api.rs  sync_import_refusal.rs  trust_while_connected.rs
crates/riot-transport/: Cargo.toml
crates/riot-transport/src/: iroh.rs  lib.rs  router.rs  seed.rs  ticket.rs
crates/riot-transport/tests/: alpn_router.rs  followed_site.rs  iroh_seed_admission.rs  iroh_sync.rs  pump_duplex.rs  ticket_gate.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: export_newswire.rs  hex_codec.rs  main.rs  sign_conference_fixture.rs  verify_conference_export.rs  verify_newswire_export.rs
(+618 files in other folders)
