[workspace]
members = [
    "crates/riot-app-cli",
    "crates/riot-core",
    "crates/riot-transport",
    "crates/riot-ffi",
    "crates/riot-conformance",
    "crates/xtask",
]
resolver = "2"

[workspace.dependencies]
# Alpha pin is evidence-specific: stable 0.5.0 resolves a bab_rs that
# computes incorrect WILLIAM3 digests (see docs/research/2026-07-10-willow-
# implementation-audit.md). Drop Format stays disabled.
willow25 = { version = "=0.6.0-alpha.3", default-features = false, features = ["std"] }
bab_rs = { version = "=0.8.1", default-features = false, features = ["william3"] }
uniffi = "=0.32.0"
camino = "=1.2.4"
minicbor = { version = "=2.2.2", features = ["std"] }
cddl-cat = "=0.7.1"
sha2 = "=0.10.9"
# Already in the willow25 transitive graph; direct pins so riot-core can
# drive the async codec traits synchronously. Recorded in the WU0R report.
pollster = "=0.4.0"
ufotofu = { version = "=0.12.4", features = ["std"] }
hifitime = "=4.3.0"
# xtask structural contract parsing only.
toml = "=0.9.8"
serde_json = "=1.0.145"
serde = "=1.0.228"
libc = "=0.2.186"
tempfile = "=3.27.0"
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["std", "fast", "zeroize", "rand_core"] }
rand_core = { version = "=0.6.4", features = ["getrandom"] }
zeroize = "=1.9.0"
# Mature RustCrypto AEAD pin for versioned local signer-state sealing. 0.11.0
# is newer, but 0.10.1 is the established stable line used for this boundary.
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc"] }
# Physical database for the multi-space store. Bundling fixes SQLite and JSON
# behavior across iOS, Android, and macOS instead of inheriting each OS build.
rusqlite = { version = "=0.40.1", default-features = false, features = ["backup", "blob", "bundled", "hooks", "limits", "serde_json"] }

# Evidence profile must unwind: the FFI boundary catches panics and
# quarantines the session; abort would make that contract impossible.
[profile.release]
panic = "unwind"
