[package]
name = "riot-anchor-protocol"
version = "0.1.0"
edition = "2021"
publish = false
description = "Canonical, dependency-neutral wire layer for the Riot public community anchor network."
license = "AGPL-3.0-or-later"

# Dependency-neutral by contract: this crate is the shared canonical frames,
# records, state enums, and codecs. It depends on `riot-core` with default
# features DISABLED (so the client-side SQLite/rusqlite feature never enters the
# graph) and on nothing that ties it to storage, HTTP, an async runtime, a P2P
# transport, FFI, or a platform. `tests/dependency_boundary.rs` enforces this.
[dependencies]
riot-core = { path = "../riot-core", default-features = false }
minicbor = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
