[package]
name = "riot-anchor"
version = "0.1.0"
edition = "2021"
publish = false
description = "Server-only Riot public community anchor daemon: SQLite-backed AnchorRepository, admission, hosting, and directory publication."
license = "AGPL-3.0-or-later"

# SERVER crate. This is the anchor daemon's storage/host runtime. It reuses the
# canonical wire layer (`riot-anchor-protocol`) and the shared verify/project
# core (`riot-core`, default features — the daemon runs on native targets with
# bundled SQLite), and persists to its OWN `AnchorRepository` schema (see
# `schema.rs`).
#
# Dependency boundary: this crate is server-only and must NEVER be pulled into a
# native app / FFI graph. That boundary is enforced structurally at WU-028; here
# we simply do not declare any app, FFI, or platform-adapter dependency. All
# SQLite access reuses the WORKSPACE `rusqlite` pin (already resolved via
# `riot-core`) — no new/different version is introduced.
[dependencies]
riot-anchor-protocol = { path = "../riot-anchor-protocol" }
riot-core = { path = "../riot-core" }
# Alpha-pinned Willow crate (already in the lock tree via riot-core). Needed
# DIRECTLY here only for `SubspaceSignature`, to reconstruct an
# `AuthorisationToken` from an untrusted item's 64-byte signature and run
# riot-core's REAL `verify_entry` Meadowcap/signature check at sync admission and
# composite-Commit revalidation. Adds a dependency EDGE only, no new lock entry.
willow25 = { workspace = true }
rusqlite = { workspace = true }
# HMAC-SHA256 for deterministic namespace-token derivation (design
# "riot/namespace-token/v1"). Reuses the WORKSPACE `sha2` pin already resolved
# via `riot-core`; adds a dependency EDGE only, no new crate to the lock tree.
sha2 = { workspace = true }

[dev-dependencies]
# Test-only operator signer: produces real Ed25519 work-challenge signatures the
# protocol's `WorkStampV1::verify` accepts. Production signer wiring (operator
# key management) lands with a later work unit.
ed25519-dalek = { workspace = true }
