[package]
name = "riot-anchor"
version = "0.1.0"
edition = "2021"
publish = false
description = "Server-only Riot public community anchor daemon: SQLite-backed AnchorRepository, admission, hosting, and directory publication."
license = "AGPL-3.0-or-later"

# SERVER crate. This is the anchor daemon's storage/host runtime. It reuses the
# canonical wire layer (`riot-anchor-protocol`) and the shared verify/project
# core (`riot-core`, default features — the daemon runs on native targets with
# bundled SQLite), and persists to its OWN `AnchorRepository` schema (see
# `schema.rs`).
#
# Dependency boundary: this crate is server-only and must NEVER be pulled into a
# native app / FFI graph. That boundary is enforced structurally at WU-028; here
# we simply do not declare any app, FFI, or platform-adapter dependency. All
# SQLite access reuses the WORKSPACE `rusqlite` pin (already resolved via
# `riot-core`) — no new/different version is introduced.
[dependencies]
riot-anchor-protocol = { path = "../riot-anchor-protocol" }
riot-core = { path = "../riot-core" }
# Alpha-pinned Willow crate (already in the lock tree via riot-core). Needed
# DIRECTLY here only for `SubspaceSignature`, to reconstruct an
# `AuthorisationToken` from an untrusted item's 64-byte signature and run
# riot-core's REAL `verify_entry` Meadowcap/signature check at sync admission and
# composite-Commit revalidation. Adds a dependency EDGE only, no new lock entry.
willow25 = { workspace = true }
rusqlite = { workspace = true }
# HMAC-SHA256 for deterministic namespace-token derivation (design
# "riot/namespace-token/v1"). Reuses the WORKSPACE `sha2` pin already resolved
# via `riot-core`; adds a dependency EDGE only, no new crate to the lock tree.
sha2 = { workspace = true }
# WU-019 increment 1: the runnable control-plane daemon. iroh + tokio are
# confined to `daemon.rs`/`main.rs` (never `riot-anchor-protocol`, which
# forbids them by test, and never the hosting/control/repository core, which
# stays transport-free). `riot-transport` supplies the multi-ALPN router and
# the QUIC accept primitive; this crate binds its OWN endpoint (with the
# router's exact ALPN set) rather than reusing `riot-transport::iroh`'s
# `bind_public`/`bind_seed`, which hardcode the `riot/sync/1` ALPN only.
riot-transport = { path = "../riot-transport" }
iroh = "1.0.2"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
# OS randomness for control-plane entropy (operation ids, challenge nonces).
# Already in the lock tree via riot-transport; adds a dependency EDGE only.
getrandom = "0.2"
# The daemon's operator signing key (Ed25519). Promoted from a test-only
# dev-dependency: production wiring needs a real `OperatorSigner`, not just the
# test fixture. Reuses the WORKSPACE pin already resolved via riot-transport —
# no new lock entry.
ed25519-dalek = { workspace = true }

[[bin]]
name = "riot-anchor"
path = "src/main.rs"
