[package]
name = "riot-anchor"
version = "0.1.0"
edition = "2021"
publish = false
description = "Server-only Riot public community anchor daemon: SQLite-backed AnchorRepository, admission, hosting, and directory publication."
license = "AGPL-3.0-or-later"

# SERVER crate. This is the anchor daemon's storage/host runtime. It reuses the
# canonical wire layer (`riot-anchor-protocol`) and the shared verify/project
# core (`riot-core`, default features — the daemon runs on native targets with
# bundled SQLite), and persists to its OWN `AnchorRepository` schema (see
# `schema.rs`).
#
# Dependency boundary: this crate is server-only and must NEVER be pulled into a
# native app / FFI graph. That boundary is enforced structurally at WU-028; here
# we simply do not declare any app, FFI, or platform-adapter dependency. All
# SQLite access reuses the WORKSPACE `rusqlite` pin (already resolved via
# `riot-core`) — no new/different version is introduced.
[dependencies]
riot-anchor-protocol = { path = "../riot-anchor-protocol" }
riot-core = { path = "../riot-core" }
# Alpha-pinned Willow crate (already in the lock tree via riot-core). Needed
# DIRECTLY here only for `SubspaceSignature`, to reconstruct an
# `AuthorisationToken` from an untrusted item's 64-byte signature and run
# riot-core's REAL `verify_entry` Meadowcap/signature check at sync admission and
# composite-Commit revalidation. Adds a dependency EDGE only, no new lock entry.
willow25 = { workspace = true }
rusqlite = { workspace = true }
# HMAC-SHA256 for deterministic namespace-token derivation (design
# "riot/namespace-token/v1"). Reuses the WORKSPACE `sha2` pin already resolved
# via `riot-core`; adds a dependency EDGE only, no new crate to the lock tree.
sha2 = { workspace = true }

# --- Daemon runtime (WU-019, gated behind the OFF-by-default `daemon` feature) --
# These are the ONLY iroh/tokio edges in this crate, and they exist solely so the
# `riot-anchor` BINARY can bind a public endpoint and serve the `riot/anchor/1`
# control ALPN. The pure library core (repository/control/hosting/...) stays
# iroh/tokio-free: `cargo test -p riot-anchor` (no feature) never compiles them,
# so the existing 218 tests are unaffected and fast. All four crates already
# resolve in the workspace lock (via riot-transport / riot-client-net), so no NEW
# lock package is introduced — only dependency EDGES (which do re-hash Cargo.lock;
# see the manifest sha refresh in fixtures/manifest.json).
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "time", "signal"], optional = true }
iroh = { version = "1.0.2", optional = true }
riot-transport = { path = "../riot-transport", optional = true }
# REAL operator signer: produces Ed25519 signatures over the control-plane signing
# preimages (work challenges, descriptors). Same crate/type the tests use; the
# daemon loads the secret from operator config instead of a fixed test key.
ed25519-dalek = { workspace = true, optional = true }
# OS entropy for anchor-minted ids (operation id, challenge nonce) in the running
# daemon. Tests inject deterministic entropy and never pull this.
getrandom = { version = "0.2", optional = true }

[features]
default = []
# Enables the daemon runtime modules (`daemon`, `admission`) and their network
# stack. The `riot-anchor` binary requires it; the library builds without it.
daemon = ["dep:tokio", "dep:iroh", "dep:riot-transport", "dep:ed25519-dalek", "dep:getrandom"]

[[bin]]
name = "riot-anchor"
path = "src/main.rs"
required-features = ["daemon"]

# --- Cross-city demo examples (Task E2) -------------------------------------
# Metadata only: examples compile against the library + dev-dependencies and
# need the daemon runtime (tokio/iroh), so they are gated exactly like the
# binary. `cargo build -p riot-anchor --features daemon --examples` builds them;
# without the feature they are skipped, not broken.

[[example]]
name = "demo_anchor"
required-features = ["daemon"]

[[example]]
name = "demo_host"
required-features = ["daemon"]

[[example]]
name = "demo_follow"
required-features = ["daemon"]

[dev-dependencies]
# Test-only operator signer: produces real Ed25519 work-challenge signatures the
# protocol's `WorkStampV1::verify` accepts. Available to ALL tests (unconditional
# dev-dep) so the existing 218 control/hosting tests keep compiling without the
# `daemon` feature.
ed25519-dalek = { workspace = true }
