[package]
name = "riot-app-cli"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "riot_app_cli"

[[bin]]
name = "riot-app"
path = "src/main.rs"

[dependencies]
riot-core = { path = "../riot-core" }
serde_json.workspace = true
serde.workspace = true
libc.workspace = true
willow25.workspace = true
rand_core.workspace = true
ed25519-dalek.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
