[package]
name = "riot-core"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# Injectable entropy/clock sources and raw-secret constructors used only by
# tests and conformance fixtures. MUST NOT be enabled in the release graph;
# riot-ffi never enables it, and `cargo xtask validate-contracts` fails if it
# appears in the riot-ffi feature closure.
#
# It enables riot-core's direct serde_json dependency for exactly one reason:
# `demo_fixture` reads the demo space's human-editable `content.json`.
# rusqlite independently enables its serde_json integration in the production
# graph for document projections; this feature gates only the demo-fixture API.
conformance = ["dep:serde_json"]

# The durable SQLite store. Default-on, so every existing build is unchanged.
# Disable (`--no-default-features`) to compile the verify+project core for
# wasm32, where SQLite's C library cannot build — the in-memory store remains.
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dependencies]
willow25 = { workspace = true }
serde_json = { workspace = true, optional = true }
bab_rs = { workspace = true }
minicbor = { workspace = true }
pollster = { workspace = true }
ufotofu = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
hifitime = { workspace = true }
zeroize = { workspace = true }
chacha20poly1305 = { workspace = true }
# Native targets compile the bundled SQLite via the default `sqlite` feature.
# Optional so a `--no-default-features` wasm build can drop the C library.
rusqlite = { workspace = true, optional = true }

# wasm32 has no OS entropy source; route getrandom through the JS crypto API.
# Native targets are unaffected.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
willow25 = { workspace = true, features = ["dev"] }
serde_json = { workspace = true }

# Integration tests exercise the injectable factories, so they need the
# conformance surface. This does not affect the release riot-ffi graph.
[[test]]
name = "public_alert"
required-features = ["conformance"]

[[test]]
name = "public_willow"
required-features = ["conformance"]

[[test]]
name = "public_bundle"
required-features = ["conformance"]

[[test]]
name = "newswire_entry"
required-features = ["conformance"]

[[test]]
name = "newswire_projection"
required-features = ["conformance"]

[[test]]
name = "core_import_join"
required-features = ["conformance"]

[[test]]
name = "core_fail_closed"
required-features = ["conformance"]

[[test]]
name = "core_import_transaction"
required-features = ["conformance"]

[[test]]
name = "core_import_lifecycle"
required-features = ["conformance"]

[[test]]
name = "core_import_concurrency"
required-features = ["conformance"]

[[test]]
name = "core_import_charge_budget"
required-features = ["conformance"]

[[test]]
name = "core_import_path_binding"
required-features = ["conformance"]

[[test]]
name = "core_import_path_size_ceilings"
required-features = ["conformance"]

[[test]]
name = "core_entries_with_prefix"
required-features = ["conformance"]

[[test]]
name = "core_import_app_entries"
required-features = ["conformance"]

[[test]]
name = "core_import_app_index_entries"
required-features = ["conformance"]

[[test]]
name = "core_import_profile_entries"
required-features = ["conformance"]

[[test]]
name = "apps_bridge"
required-features = ["conformance"]

[[test]]
name = "apps_trust_entries"
required-features = ["conformance"]

[[test]]
name = "profile_resolver"
required-features = ["conformance"]

[[test]]
name = "core_import_path_family_isolation"
required-features = ["conformance"]

[[test]]
name = "demo_fixture_drift"
required-features = ["conformance"]

# The demo packer signs with seeded keys so its output is byte-reproducible,
# which is the raw-secret constructor behind `conformance`.
[[example]]
name = "pack_demo_space"
required-features = ["conformance"]
