[package]
name = "riot-ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
ed25519-dalek = { workspace = true }
minicbor = { workspace = true }
riot-core = { path = "../riot-core" }
uniffi = { workspace = true }
willow25 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
minicbor = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
