[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
toml = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
uniffi = { workspace = true, features = ["bindgen"] }
camino = { workspace = true }
riot-core = { path = "../riot-core" }
willow25 = { workspace = true }
